# whorl

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  compile-time-lockdep.md
examples/: bank_ok.whorl  callback_deadlock.whorl  callback_safe.whorl  couple_btree.whorl  couple_cross_class.whorl  cross_call.whorl  extern_ffi.whorl  fixed_transfer.whorl  isr_masked_safe.whorl  isr_preemption.whorl  three_lock_cycle.whorl  two_account_transfer.whorl
experiments/: .gitignore  README.md
experiments/corpus/: README.md  run.py  run_dylint.py  run_lockbud.py  run_toys.py
experiments/corpus/cases/: accessor_class_split_deadlock.rs  branch_deadlock.rs  closure_call_deadlock.rs  consistent_order_safe.rs  cross_call_deadlock.rs  cross_class_cycle.rs  deref_field_split_deadlock.rs  double_lock_self.rs  generic_class_split_deadlock.rs  loop_reacquire_safe.rs  mem_drop_release_safe.rs  outer_lock_serializes.rs  rwlock_nesting_safe.rs  sequential_safe.rs  three_lock_chain_safe.rs  three_lock_cycle.rs  two_account_deadlock.rs  two_path_accessor_deadlock.rs  two_statics_consistent_safe.rs  two_statics_inverted_deadlock.rs
experiments/embedded/: README.md  run.py
experiments/embedded/cases/: cs_nested_safe.rs  (+3 more)
experiments/fieldtrial/: README.md
experiments/mir-poc/: README.md  cycle.rs  demo.rs  demo2.rs  poc.py  safe.rs  whorl_mir.py
experiments/whorl_lint/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
experiments/whorl_lint/.cargo/: config.toml
experiments/whorl_lint/src/: lib.rs
experiments/whorl_lint/ui/: main.rs
src/: ast.rs  events.rs  frontend.rs  main.rs  model.rs  parser.rs  solver.rs
